# hikvision-unifi-fire-bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: camera.rs  config.rs  event.rs  framing.rs  health.rs  lib.rs  main.rs  probe.rs  state.rs  webhook.rs
tests/: e2e.rs
