[package]
name = "hikvision-unifi-fire-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "AGPL-3.0-or-later"
description = "Bridge Hikvision ISAPI fire-detection events into UniFi Protect Alarm Manager webhooks"
repository = "https://github.com/Gasmanc/hikvision-unifi-fire-bridge"
keywords = ["hikvision", "unifi", "protect", "fire", "isapi"]
categories = ["network-programming"]

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
diqwest = "3.2"
futures-util = "0.3"
quick-xml = "0.41"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tokio-stream = "0.1"

[profile.release]
lto = "thin"
strip = true
